# MyWindowAPI

./: .gitignore  CMakeLists.txt  LICENSE
Test/: main.cpp
include/mwindow/: logger.h  logging.h  mTime.h  mwindow.h
src/: logger.cpp  logging.cpp  mTime.cpp  main.cpp  mwindow.cpp
